# liteflow

./: README.md  pyproject.toml
.github/workflow/: release.yaml
liteflow/: __init__.py  dask.py  local.py  ray.py
liteflow/backends/: dask_backend.py  local_backend.py  ray_backend.py
liteflow/core/: context.py  dag.py  rdd.py
liteflow/tests/: test_dask.py  test_local.py  test_ray.py
liteflow/utils/: logger.py
