[project]
name = "liteflow"
version = "0.1.0"
description = "A backend-agnostic, lightweight parallel data processing framework with Spark-like APIs for local and scalable execution."
authors = [
    { name = "Babak Afshin-Pour", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["spark", "ray", "rdd", "parallel", "mapreduce", "debugging", "local"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
ray = ["ray[data]"]
dask = ["dask[bag]"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"